force-app/main/default/objects/projects__c/projects__c.object-meta.xml
<CustomObject>
    <label>project</label>
    <nameField>
        <label>projects Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>