force-app/main/default/objects/projects__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>projects</relationshipLabel>
    <relationshipName>projects1</relationshipName>
    <type>Lookup</type>
</CustomField>