force-app/main/default/objects/projects__c/fields/complex_project_ID__c.field-meta.xml
<CustomField>
    <fullName>complex_project_ID__c</fullName>
    <label>complex project ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>