force-app/main/default/objects/projects__c/fields/no_of_acitivities_completed__c.field-meta.xml
<CustomField>
    <fullName>no_of_acitivities_completed__c</fullName>
    <label>no of acitivities completed</label>
    <summaryFilterItems>
        <field>project_activities__c.AStatus__c</field>
        <operation>equals</operation>
        <value>completed</value>
    </summaryFilterItems>
    <summaryForeignKey>project_activities__c.project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>