force-app/main/default/objects/projects__c/fields/project_compled__c.field-meta.xml
<CustomField>
    <fullName>project_compled__c</fullName>
    <formula>no_of_acitivities_completed__c / total_no_of_activities__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>project compled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>