force-app/main/default/objects/projects__c/fields/project_no__c.field-meta.xml
<CustomField>
    <fullName>project_no__c</fullName>
    <displayFormat>P-{000}</displayFormat>
    <label>project no</label>
    <type>AutoNumber</type>
</CustomField>