force-app/main/default/objects/projects__c/fields/Pstatus__c.field-meta.xml
<CustomField>
    <fullName>Pstatus__c</fullName>
    <label>Pstatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>new</fullName>
            </value>
            <value>
                <fullName>working</fullName>
            </value>
            <value>
                <fullName>completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>