force-app/main/default/objects/projects__c/fields/total_no_of_activities__c.field-meta.xml
<CustomField>
    <fullName>total_no_of_activities__c</fullName>
    <label>total no of activities</label>
    <summaryForeignKey>project_activities__c.project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>