force-app/main/default/objects/projects__c/recordTypes/complex_project.recordType-meta.xml
<RecordType>
    <fullName>complex_project</fullName>
    <active>true</active>
    <label>complex project</label>
</RecordType>