force-app/main/default/objects/projects__c/recordTypes/simple_project.recordType-meta.xml
<RecordType>
    <fullName>simple_project</fullName>
    <active>true</active>
    <label>simple project</label>
</RecordType>