force-app/main/default/objects/projects__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>project_compled__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>